--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.15"
