--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image": "^4.1.0",
     "react-intersection-observer": "^9.16.0",
+    "react-pdf": "^9.2.1",
+    "react-player": "^2.16.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.15"
