--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/x-date-pickers": "^7.28.3",
+    "@pdfslick/react": "^2.3.0",
     "@tailwindcss/vite": "^4.0.15",
     "@toolpad/core": "^0.13.0",
     "axios": "^1.8.4",
