--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@mui/x-charts": "^8.3.1",
     "@mui/x-date-pickers": "^7.28.3",
     "@pdfslick/react": "^2.3.0",
     "@tailwindcss/vite": "^4.0.15",
